--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,7 @@
-<h1>New Post</h1>
+<div id="page_wrapper">
+	<h1>New Post</h1>
 
-<%= form_for :post, url: posts_path do |f| %>
+	<%= form_for :post, url: posts_path do |f| %>
 	<p>
 		<%= f.label :title %><br>
 		<%= f.text_field :title %>
@@ -15,4 +16,6 @@
 	</p>
 
 
+
 <% end %>
+</div>
