--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 		</ul>
 
 		<% if !user_signed_in? %>
-		<p class="sign_in">Admin Login</p>
+		<p class="sign_in"><%= link_to "Admin Login", new_user_session_path %></p>
 		<% end %>
 	</div>
 
@@ -46,8 +46,8 @@
 
 			<% if user_signed_in? %>
 				<div class="buttons">
-					<button class="button"><%= link_to "New Post", new_post_path %></button>
-					<button class="button">Log Out</button>
+					<p class="button"><%= link_to "New Post", new_post_path %></p>
+					<p class="button"><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></p>
 				</div>
 			<% end %>	
 
