--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,10 @@
 		<%= @post.title %>
 	</h1>
 
+	<p>
+	<%= image_tag @post.image.url(:medium) %>
+	</p>
+
 	<p class="date">
 		Submitted <%= time_ago_in_words(@post.created_at) %> Ago
 		<% if user_signed_in? %>
