--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,6 +10,11 @@
 		</div>
 	<% end %>
 	<p>
+		<%= f.label :image %>
+		<%= f.file_field :image %>
+	</p>
+
+	<p>
 		<%= f.label :title %><br>
 		<%= f.text_field :title %>
 	</p>
