--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,18 @@
-<% @posts.each do |post| %>
-	<div class="post_wraper">
-		<h2 class="title"><%= link_to post.title, post %></h2>
-		<%= link_to (image_tag post.image.url(:small)), post %>
-		<p class="date"><%= post.created_at.strftime("%B, %d, %Y") %></p>
-	</div>
+<% @posts.each_slice(3) do |post| %>
+  <div class="row">
+    <% @posts.each do |post| %>
+      <div class="col-md-4">
+        <div class="post">
+          <div class="image_wrapper">
+            <%= link_to post do %>
+              <%= image_tag post.image.url(:medium) %>
+            <% end %>
+          </div>
+          <h2>
+            <%= link_to post.title, post %>
+          </h2>
+        </div>
+      </div>
+    <% end %>
+  </div>
 <% end %>
