--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,135 +14,300 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import 'normalize';
 
-@mixin box-shadow {
-	-webkit-box-shadow: rgba(0, 0, 0, 0.09) 0 2px 0;
-	-moz-box-shadow: rgba(0, 0, 0, 0.09) 0 2px 0;
-	box-shadow: rgba(0, 0, 0, 0.09) 0 2px 0;
+
+html, body {
+	font-family: 'Raleway', sans-serif;
+	
 }
 
-$red: #DB6161;
-
-body {
-	background: rgb(235, 238, 243);
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 100;
 }
 
-.main_content {
-	padding: 0 0 50px 0;
+a {
+	text-decoration: none;
+	color: inherit;
 }
 
-.alert {
-	padding: 15px;
-	margin-bottom: 20px;
-	border: 1px solid transparent;
-	border-radius: 5px;
-	@include box-shadow;
-	background: white;
-	font-weight: bold;
-}
-
-.navbar {
-	margin-bottom: 50px;
-	@include box-shadow;
-	border: none;
-	.navbar-brand {
-		text-transform: uppercase;
-		letter-spacing: -1px;
-		font-weight: bold;
-		font-size: 25px;
-		a {
-			color: $red;
+#sidebar {
+	width: 250px;
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	background: #f5f7f9;
+	padding: 7em 0 0 0;
+	border-right: 1px solid #d6dce0;
+	#logo {
+		width: 40px;
+		position: absolute;
+		right: 3em;
+		top: 3em;
+	}
+	ul {
+		list-style: none;
+		text-align: right;
+		padding-right: 3em;
+		.category {
+			font-weight: 700;
+			font-size: 0.7em;
+			text-transform: uppercase;
+			color: #33acb7;
 		}
-	}
-}
-
-.post {
-	background: white;
-	border-radius: 5px;
-	margin-bottom: 40px;
-	@include box-shadow;
-	.image_wrapper {
-		max-width: 100%;
-		border-radius: 5px 5px 0 0;
-		overflow: hidden;
-	}
-	img {
-		width: 100%;
-		-webkit-transition: all .3s ease-out;
-	  -moz-transition: all .3s ease-out;
-	  -o-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-		&:hover {
-			transform: scale(1.075);
-		}
-	}
-	h2 {
-		padding: 15px 5%;
-		margin: 0;
-		font-size: 20px;
-		font-weight: normal;
-		line-height: 1.5;
-		a {
-			color: $red;
-		}
-	}
-}
-
-#recipe_top {
-	margin-bottom: 50px;
-}
-
-#recipe_info, #ingredients, #directions {
-	background: white;
-	@include box-shadow;
-	min-height: 360px;
-	border-radius: 5px;
-	padding: 2em 8%;
-}
-
-.recipe_image {
-	max-width: 100%;
-	border-radius: 5px;
-	@include box-shadow;
-}
-
-#recipe_info {
-	h1 {
-		font-size: 36px;
-		font-weight: normal;
-		color: $red;
-	}
-	.description {
-		color: #8A8A8A;
-		font-size: 20px;
-	}
-}
-
-#ingredients, #directions {
-	margin-bottom: 50px;
-	ul, ol {
-		padding-left: 18px;
 		li {
-			padding: 1em 0;
-			border-bottom: 1px solid #EAEAEA;
+			padding: .5em 0;
+			a {
+				color: #9eafba;
+				text-decoration: none;
+				transition: all .4s ease;
+				&:hover {
+					color: #33acb7;
+				}
+			}
+		}
+		.active {
+			a {
+				color: #33acb7;
+			}
+		}
+	}
+	.sign_in {
+		position: absolute;
+		right: 3em;
+		top: 80%;
+		font-size: .8em;
+		color: #9eafba;
+	}
+}
+
+.button {
+	outline: none;
+	background: transparent;
+	border: 1px solid #d6dce0;
+	padding: .5em 1.5em;
+	border-radius: 1.5em;
+	&:hover {
+		border: 1px solid #33acb7;
+		color: #33acb7;
+		a {
+			color: #33acb7 !important;
 		}
 	}
 }
 
-.form-inline {
-	margin-top: 15px;
+.clearfix:after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
 }
-.form-input {
-	width: 65% !important;
-	float: left;
+
+#main_content {
+	margin-left: 250px;
+	#header {
+		padding: 1em 3em;
+		border-bottom: 1px solid #d6dce0;
+		background: #f5f7f9;
+		color: #9eafba;
+		p {
+			display: inline;
+		}
+		a {
+			color: #9eafba;
+			text-decoration: none;
+		}
+		.buttons {
+			float: right;
+			margin-top: 0px;
+			.button {
+				font-size: .8em;
+				margin-left: .5em;
+			}
+		}
+	}
+	.post_wrapper {
+		padding: 3em;
+		border-bottom: 1px solid #d6dce0;
+		.title {
+			margin: 0;
+			a {
+				font-weight: 500;
+				text-decoration: none;
+				color: #2a2f35;
+				font-size: 1.5em;
+				&:hover {
+					color: #33acb7;
+				}
+			}
+		}
+		.date_and_author {
+			color: red;
+			margin: .5em 0 0 0;
+		}
+	}
+	#post_content {
+		padding: 1em 3em;
+		.title {
+			font-weight: 500;
+			text-decoration: none;
+			color: #555555;
+			font-size: 1.7em;
+			margin-bottom: 0;
+		}
+		img {
+		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.22);
+		}
+		.body {
+			font-size: 1.0em;
+			color: #555555;
+			line-height: 1.75;
+		}
+		.date_and_author {
+			color: red;
+			margin: .5em 0 2em 0;
+		}
+		#comments {
+			h2 {
+				margin: 3em 0 1em 0;
+				border-bottom: 1px solid #d6dce0;
+				padding-bottom: 0.5em;
+			}
+			h3 {
+				margin-top: 2em;
+			}
+			.comment {
+				border-bottom: 1px solid #d6dce0;
+				padding: 1.5em 2em;
+				.clear_both {
+					clear: both;
+				}
+				&:after {
+					clear: both;
+				}
+				.comment_content {
+					float: left;
+					.comment_name {
+						margin: 1em 0 0 0;
+						font-size: 0.7em;
+						text-transform: uppercase;
+					}
+					.comment_body {
+						font-size: 1.2em;
+						margin: 0.2em 0 0 0;
+					}
+					.comment_time {
+						margin-top: 1.2em;
+						font-size: .8em;
+					}
+				}
+				.button {
+					float: right;
+				}
+			}
+			input[type="text"], textarea {
+				width: 50%;
+			}
+		}
+	}
+	#page_wrapper {
+		padding: 3em;
+		#profile_image {
+			width: 300px;
+			float: left;
+			margin-right: 2em;
+			img {
+				width: 100%;
+				border-radius: 0.35em;
+			}
+		}
+		#content {
+			h1 {
+				font-weight: 500;
+			}
+			p {
+				font-size: 1.1em;
+				line-height: 1.75;
+			}
+			a {
+				color: #33acb7;
+				font-weight: 700;
+				text-decoration: none;
+			}
+		}
+	}
+	.links {
+		margin: 2em 0;
+	}
+	input[type="text"], input[type="email"], input[type="password"], textarea {
+		width: 90%;
+		border: 1px solid #d6dce0;
+		border-radius: .35em;
+		margin-top: 10px;
+		padding: .5em 1em;
+		line-height: 1.75;
+	}
+	input[type="text"] {
+		height: 35px;
+	}
+	textarea {
+		min-height: 180px;
+	}
+	input[type="submit"] {
+		outline: none;
+		background: transparent;
+		border: 1px solid #d6dce0;
+		padding: .5em 1.5em;
+		font-size: 1.1em;
+		border-radius: 1.5em;
+		margin-left: .5em;
+		&:hover {
+			border: 1px solid #33acb7;
+			color: #33acb7;
+		}
+	}
 }
-.form-button {
-	float: left;
-	width: 30% !important;
-	margin-left: 5%;
-}
-.add-button {
-	margin-top: 25px;
+
+
+#posts {
+	.post {
+		background: #f5f7f9;
+		width: 275px;
+
+		float: left;
+		margin: 1rem 1.5%;
+		border: 1px solid #d1d1d1;
+		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+		border-radius: 0.3rem;
+		.post_image {
+			height: 100%;
+			overflow: hidden;
+
+			img {
+				width: 100%;
+				height: 100%;
+				border-radius: .3rem .3rem 0 0;
+				box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+			}
+		}
+		.post_content {
+			h2 {
+				margin: 0;
+				font-weight: 300;
+				color: red;
+				padding: 1rem 5%;
+				border-bottom: 1px solid #E4E4E4;
+				font-size: 1.25rem;
+				a {
+					text-decoration: none;
+					color: #666666;
+					font-weight: 300;
+					
+				}
+			}
+			
+		}
+	}
 }
