--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,17 @@
 			<% end %>
 		</div>
 
-		<ul>
-			<li class="category">Website</li>
-			<li><%= link_to "Blog", root_path %></li>
-			<li><%= link_to "About", about_path %></li>
-		</ul>
+    <div class="container">
+      <div class="navbar-brand">
+
+			<ul>
+				<li class="category">Website</li>
+				<li><%= link_to "Blog", root_path %></li>
+				<li><%= link_to "About", about_path %></li>
+			</ul>
+
+			</div>
+		</div>
 
 		<ul>
 			<li class="category">Social</li>
@@ -65,3 +71,6 @@
 
 </body>
 </html>
+
+
+
